[package]
name = "cargo-extras"
version = "0.1.0"
license = "MIT"
description = "A collection of cargo subcommands"
keywords = ["cargo", "subcommands", "command", "collection", "pack"]
readme = "README.md"
repository = "https://github.com/kbknapp/cargo-extras.git"
authors = [
  "Kevin K. <kbknapp@gmail.com>", # cargo-outdated, cargo-count, cargo-graph
  "Max New <maxsnew@gmail.com>", # cargo-grpah
  "Ray Solomon <raybsolomon@gmail.com>", # cargo-check
  "Paul Woolcock <paul@woolcock.us>" # cargo-do, cargo-fmt
  "Without Boats <lee@libertad.ucsd.edu>", # cargo-edit (add, rm, list)
  "Pascal Hertleif <killercup@gmail.com>" # cargo-edit (add, rm, list)
]

[[bin]]
name = "cargo-check"
path = "src/cargo-check/src/main.rs"

[[bin]]
name = "cargo-count"
path = "src/cargo-count/src/main.rs"

[[bin]]
name = "cargo-graph"
path = "src/cargo-graph/src/main.rs"
test = false
doc = true

[[bin]]
name = "cargo-outdated"
path = "src/cargo-outdated/src/main.rs"

[[bin]]
name = "cargo-list"
path = "src/cargo-edit/src/bin/list/main.rs"

[[bin]]
name = "cargo-add"
path = "src/cargo-edit/src/bin/add/main.rs"

[[bin]]
name = "cargo-rm"
path = "src/cargo-edit/src/bin/rm/main.rs"

[[bin]]
name = "cargo-fmt"
path = "src/cargo-fmt/src/main.rs"

[dependencies]
### cargo-count
clap      = "~1.5"
glob      = "~0.2"
regex     = "~0.1"
tabwriter = "~0.1"
ansi_term = {version = "~0.7", optional = true}
### cargo-graph
toml = "~0.1"
# clap = "~1.5"
# ansi_term = { version = "~0.7", optional = true }
### cargo-outdated
# clap = "~1.5"
# toml = "0.1"
semver = "0.2"
# tabwriter = "0.1"
tempdir = "0.3"
# ansi_term = {version = "0.7", optional = true}
### cargo-edit
docopt = "0.6"
pad = "0.1"
rustc-serialize = "0.3"
# semver = "0.1"
# toml = "0.1"
curl = "0.2.11"
quick-error = "0.1.3"
### cargo-fmt
walker = "^1.0.0"

[dev-dependencies]
### cargo-edit
assert_cli = "0.2.0"
tempdir = "0.3"

[features]
default = ["color"]
color   = ["ansi_term"]
